# clip-task

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yaml
notebooks/: TakeHomeTask.ipynb  results.ipynb
short_research_project/: dataset.py  evaluation.py  train_linear_probe.py  utils.py
short_research_project/model/: clip.py  linear_probe.py
